# src/main/java/com/hss/investment/application/dto/calculation/ProfitReturnDTO.java
@@ -2,6 +2,6 @@ package com.hss.investment.application.dto.calculation;
 
 import java.math.BigDecimal;
 
-public record ProfitReturnDTO(BigDecimal expectedEarnings, BigDecimal earnedAmount, BigDecimal profit) {
+public record ProfitReturnDTO(BigDecimal earnings, BigDecimal profit) {
 
 }
